--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -1,25 +1,60 @@
-.nav {
-  display: flex;
-  align-items: center;
-  position: fixed;
-  background-color: white;
+.navbar {
+  position: absolute !important;
   top: 10px;
-  left: 35%;
-  width: 60%;
-  height: 40px;
-  padding: 20px;
-  border-radius: 40px;
-  z-index: 1;
+  right: 0;
+  z-index: 5000;
+  width: auto;
+  border-top-left-radius: 45px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 45px;
+  height: 90px;
+  padding-left: 90px !important;
 }
-.list {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+:global(.overlay){
+  display: none;
 }
-
-.link {
-  text-decoration: none;
+@media only screen and (max-width: 600px) {
+  .navbar {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    z-index: 5000;
+    width: 100%;
+    border-radius: 0;
+    height: auto;
+    padding: 0.5rem 1rem !important;
+  }
+  .collapse:not(.show:global) {
+      display: flex !important;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
+      height: auto !important;
+      position: absolute;
+      top: 54px;
+      left: 100%;
+      width: 80%;
+      background-color: white;
+      padding: 0.5rem 1rem;
+      z-index: 5000;
+      transition: all 0.3s ease !important;
+  }
+  .collapse:not(.show:global) .navbar-nav{
+    padding-left: 0;
+  }
+  .collapse:global.show{
+    left: 20% !important;
+    transition: all 0.3s ease !important;
+  }
+  .navbar > .collapse:global.show ~ .overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4990;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 }
