--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/*
+  Global styles
+*/
+
 body {
   margin: 0;
   padding: 0;
@@ -31,4 +35,18 @@ body {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.mapboxgl-popup-anchor-top .mapboxgl-popup-tip{
+  border-bottom-color: #2a2933;
+}
+.mapboxgl-popup-content{
+  padding: 15px 15px 15px;
+  background: #2a2933;
+  border-radius: 10px;
+}
+.mapboxgl-popup-close-button{
+  right: 3px;
+  top: 3px;
+  color: #979ba9;
 }
